# acari

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build.yml  release.yml
cli/: Cargo.toml
cli/shell_completions/: acari.fish
cli/shell_completions/zsh/: _acari
cli/src/: config.rs  error.rs  main.rs
cli/src/commands/: add.rs  all_projects.rs  check.rs  clear_cache.rs  customers.rs  entries.rs  init.rs  mod.rs  profiles.rs  projects.rs  projects_of_customer.rs  services.rs  set.rs  start.rs  stop.rs  tracker.rs  tracking.rs
lib/: Cargo.toml
lib/src/: cached_client.rs  client.rs  error.rs  everhour_client.rs  everhour_client_tests.rs  everhour_model.rs  lib.rs  mite_client.rs  mite_client_tests.rs  mite_model.rs  model.rs  query.rs  requester.rs  std_client.rs  tests.rs
