[package]
name = "acari-cli"
version = "0.1.0"
authors = ["Bodo Junglas <junglas@objectcode.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
clap = "2"
dirs = "2"
toml = "0"
text_io = "0"
prettytable-rs = "0"
itertools = "0"
chrono = { version = "0.4", features = ["serde"] }
acari-lib = { path = "../lib" }


[[bin]]
name = "acari"
path = "src/main.rs"