[package]
name = "acari-cli"
version = "0.1.0"
authors = ["Bodo Junglas <junglas@objectcode.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/untoldwind/acari"
description = "Command-line client for mite time-tracking"
readme = "../README.md"
keywords = ["mite", "mite-api", "time-tracking"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
clap = "2"
dirs = "2"
toml = "0"
text_io = "0"
prettytable-rs = "0"
itertools = "0"
chrono = { version = "0.4", features = ["serde"] }
acari-lib = { path = "../lib" }


[[bin]]
name = "acari"
path = "src/main.rs"