[package]
name = "acari-lib"
version = "0.1.0"
authors = ["Bodo Junglas <junglas@objectcode.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
chrono = { version = "0.4", features = ["serde"] }
