[package]
name = "acari-lib"
version = "0.1.5"
authors = ["Bodo Junglas <junglas@objectcode.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/untoldwind/acari"
description = "Pragmatic client for the mite timetracking API"
readme = "../README.md"
keywords = ["mite", "mite-api", "time-tracking"]

[dependencies]
dirs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"

[dev-dependencies]
pact_consumer = "0.6"
pretty_assertions = "0.6"
